--- a/openocd.cfg
+++ b/openocd.cfg
@@ -1,17 +1,25 @@
-#source [find interface/stlink-v2-1.cfg]
+source [find interface/stlink-dap.cfg]
 
-adapter driver st-link
 st-link vid_pid 0x0483 0x374f
+adapter driver st-link
+adapter speed 1000
 
 gdb_memory_map enable
 gdb_flash_program enable
 gdb_port 4242
 
+
+reset_config srst_only srst_nogate connect_assert_srst
+set CLOCK_FREQ 24000
+set CONNECT_UNDER_RESET 1
+set CORE_RESET 0
+set STOP_WATCHDOG 1
+set WORKAREASIZE 0xe000
+set _WORKAREASIZE 0xe000
+
 source [find target/stm32f4x.cfg]
 
-reset_config srst_only
-
-tpiu config internal swout.txt uart off 72000000 1000000
+tpiu config internal swout.txt uart off 168000000 1000000
 
 itm port 0 on
 itm ports on
