Make sure you update flash latency before switching up the sysclk to the PLL! Otherwise flash won't be readable :)

--- a/openocd.cfg
+++ b/openocd.cfg
@@ -9,7 +9,7 @@ gdb_flash_program enable
 gdb_port 4242
 
 
-reset_config srst_only srst_nogate connect_assert_srst
+reset_config srst_only separate connect_assert_srst
 set CLOCK_FREQ 24000
 set CONNECT_UNDER_RESET 1
 set CORE_RESET 0
