For this STM32F407 board, disable the TPIU formatter and use UART encoding for the SWO print function. All the ITM values are defaulted, and it works!

--- a/openocd.cfg
+++ b/openocd.cfg
@@ -19,7 +19,7 @@ set _WORKAREASIZE 0xe000
 
 source [find target/stm32f4x.cfg]
 
-tpiu config internal swout.txt uart off 168000000 1000000
+tpiu config internal swout.txt manchester on 168000000 1000000
 
 itm port 0 on
 itm ports on
