Major overhaul and streamlining of the build process

--- a/openocd.cfg
+++ b/openocd.cfg
@@ -4,6 +4,8 @@ st-link vid_pid 0x0483 0x374f
 adapter driver st-link
 adapter speed 1000
 
+transport select dapdirect_swd
+
 gdb_memory_map enable
 gdb_flash_program enable
 gdb_port 4242
@@ -19,8 +21,11 @@ set _WORKAREASIZE 0xe000
 
 source [find target/stm32f4x.cfg]
 
-tpiu config internal swout.txt manchester on 168000000 1000000
+tpiu config internal swout.txt uart off 168000000 1000000
 
 itm port 0 on
 itm ports on
 
+rename shutdown old_shutdown;
+
+proc shutdown {} { catch {tpiu config disable}; old_shutdown }
